- fix app height on mobile - make topnav hideen when scrolling

--- a/src/components/ui/bottom-sheet/styles.scss
+++ b/src/components/ui/bottom-sheet/styles.scss
@@ -1,6 +1,6 @@
 .bottom-sheet-overlay{
     position: absolute;
-    height: 100vh;
+    height: 100dvh;
     bottom: 0px;
     left: 0px;
     right: 0px;
